[gd_scene load_steps=5 format=3 uid="uid://fsm14h585y6t"]

[ext_resource type="Script" path="res://scenes/top/enemy.gd" id="1_fh0y6"]
[ext_resource type="AudioStream" uid="uid://ikwun8yqvhm0" path="res://sounds/enemy_hit.wav" id="2_k3y6m"]
[ext_resource type="AudioStream" uid="uid://c6i6ngbilejwy" path="res://sounds/enemy_flee.wav" id="3_hy842"]
[ext_resource type="AudioStream" uid="uid://6rqhwqg2g7a2" path="res://sounds/enemy_heal.wav" id="4_lehlw"]

[node name="Enemy" type="Area2D"]
position = Vector2(1, 1)
script = ExtResource("1_fh0y6")

[node name="SoundHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_k3y6m")
volume_db = -10.0
bus = &"Sounds"

[node name="SoundFlee" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hy842")
volume_db = -3.0
bus = &"Sounds"

[node name="SoundHeal" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_lehlw")
volume_db = -5.0
bus = &"Sounds"

[connection signal="input_event" from="." to="." method="_on_input_event"]
